Fix footer text alignment issue.

--- a/src/App.css
+++ b/src/App.css
@@ -77,7 +77,7 @@ div.backgroundMedia {
 .footer {
   position: fixed;
   bottom: 0;
-  width: 90%;
+  /* width: 90%; */
   padding: 0 2em;
   margin: 0 3em;
 }
